--- a/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
+++ b/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
@@ -13,7 +13,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "tags": [
+        "hide-output",
+    ]
    },
    "outputs": [
     {
