test hide cell output

--- a/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
+++ b/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
@@ -13,10 +13,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "Collapsed": "false",
-    "tags": [
-        "hide-output",
-    ]
+    "Collapsed": "false"
    },
    "outputs": [
     {
