--- a/_sources/tutorial-notebooks/getting_started.ipynb
+++ b/_sources/tutorial-notebooks/getting_started.ipynb
@@ -183,6 +183,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "using Pkg\n",
+    "Pkg.add(\"StochasticDiffEq\")\n",
+    "Pkg.add(\"DSP\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
@@ -3293,15 +3306,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.2",
+   "display_name": "Julia 1.6.3",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.2"
+   "version": "1.6.3"
   }
  },
  "nbformat": 4,
