--- a/_sources/tutorial-notebooks/getting_started.ipynb
+++ b/_sources/tutorial-notebooks/getting_started.ipynb
@@ -33,11 +33,13 @@
     "Collapsed": "false"
    },
    "source": [
-    ":::{figure,myclass} linear-chain-image\n",
-    "<img src=\"media/trapped_ion_system.png\" align=\"center\" width=\"700px\">\n",
-    "\n",
+    "```{figure} media/trapped_ion_system.png\n",
+    "---\n",
+    "width: 700px\n",
+    "name: linear-chain-image\n",
+    "---\n",
     "A laser shining on a linear chain of trapped ions.\n",
-    ":::"
+    "```"
    ]
   },
   {
