--- a/_sources/example-notebooks/multi-mode_interactions.ipynb
+++ b/_sources/example-notebooks/multi-mode_interactions.ipynb
@@ -41,9 +41,10 @@
    "source": [
     "using QuantumOptics\n",
     "using IonSim\n",
-    "using DSP: periodogram\n",
     "using Pkg;\n",
+    "Pkg.add(\"DSP\")\n",
     "Pkg.add(\"LaTeXStrings\")\n",
+    "using DSP: periodogram\n",
     "using LaTeXStrings\n",
     "import PyPlot\n",
     "const plt = PyPlot"
