--- a/_sources/tutorial-notebooks/getting_started.ipynb
+++ b/_sources/tutorial-notebooks/getting_started.ipynb
@@ -552,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have assigned the alias `\"S\"` to the sublevel `(\"S1/2\", -1//2)`, and the alias `\"D\"` to the sublevel `(\"D5//2\", -1/2)`. We may now refer to these sublevels by these aliases in future function calls.\n",
+    "Here we have assigned the alias `\"S\"` to the sublevel `(\"S1/2\", -1//2)`, and the alias `\"D\"` to the sublevel `(\"D5/2\", -1//2)`. We may now refer to these sublevels by these aliases in future function calls.\n",
     "\n",
     "We can use the function `sublevel_aliases` to see all aliases assigned to a given `Ion`'s sublevels"
    ]
