--- a/webpage/example-notebooks/multi-mode_interactions.ipynb
+++ b/webpage/example-notebooks/multi-mode_interactions.ipynb
@@ -134,7 +134,7 @@
     "        ions=[C], com_frequencies=(x=νᵣ, y=νᵣ, z=νₐ), \n",
     "        vibrational_modes=(x=[1], z=[1])\n",
     "    )\n",
-    "T = Trap(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L])\n",
+    "T = Chamber(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L])\n",
     "# set laser parameters\n",
     "L.k = (x̂ + ẑ)/√2\n",
     "L.ϵ = ẑ\n",
