--- a/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
+++ b/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
@@ -129,7 +129,7 @@
     "chain = LinearChain(\n",
     "        ions=[C, C], com_frequencies=(x=3e6,y=3e6,z=2.5e5), vibrational_modes=(;z=[1])\n",
     "    )\n",
-    "T = Trap(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[L1, L2]);"
+    "T = Chamber(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[L1, L2]);"
    ]
   },
   {
