--- a/webpage/example-notebooks/two_ion_vaet.ipynb
+++ b/webpage/example-notebooks/two_ion_vaet.ipynb
@@ -163,7 +163,7 @@
     "        ions=[C, C], com_frequencies=(x=3e6,y=3e6,z=1e6), \n",
     "        vibrational_modes=(x=[1], z=[1])\n",
     "    )\n",
-    "T = Trap(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[L1, L2])\n",
+    "T = Chamber(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[L1, L2])\n",
     "\n",
     "axial_mode = T.configuration.vibrational_modes.z[1]\n",
     "radial_mode = T.configuration.vibrational_modes.x[1]\n",
