--- a/_sources/example-notebooks/ramped_molmer_sorensen.ipynb
+++ b/_sources/example-notebooks/ramped_molmer_sorensen.ipynb
@@ -59,8 +59,9 @@
     "$$ (MS-Hamiltonian)\n",
     "\n",
     "```{dropdown} Variable definitions:\n",
+    "* $i$: Corresponding to the $i^{th}$ laser.\n",
     "* $\\pmb{\\Omega}$: Characterizes the strength of the ion-light interaction, which we assume to be identical for both lasers.\n",
-    "* $\\pmb{\\hat{\\sigma_+}^{(i)}}$: If we model the electronic energy levels of the ion in order of increasing energy as $|1⟩$, $|2⟩$, then $σ̂₊ = |2⟩⟨1|$ (the superscript denotes the ion).\n",
+    "* $\\pmb{\\hat{\\sigma_+}^{(j)}}$: If we model the electronic energy levels of each ion in order of increasing energy as $|1⟩$, $|2⟩$, then $σ̂₊ = |2⟩⟨1|$ (the superscript $j$ denotes the ion).\n",
     "* $\\pmb{\\eta}$: Denotes the *Lamb-Dicke* factor, which characterizes the strength with which the laser interaction couples the ion's motion to its electronic states.\n",
     "* $\\pmb{â}$: The Boson annihilation operator for the vibrational mode.\n",
     "* $\\pmb{\\nu}$: The vibrational mode frequency.\n",
